--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-FLASK_APP=app/app.py
+FLASK_APP=app.py
 FLASK_ENV=development
 
 MONGO_URI=mongodb+srv://admin:jean2004@dbcurriculo.borwy.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
