--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-FLASK_APP=app.py
+FLASK_APP=app-one.py
 FLASK_ENV=development
 
-MONGO_URI=mongodb+srv://admin:jean2004@dbcurriculo.borwy.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://admin:jean2004@dbcurriculo.borwy.mongodb.net/dbcurriculo?retryWrites=true&w=majority
 SECRET_KEY=salt
