--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-FLASK_APP=app-one.py
+FLASK_APP=run.py
 FLASK_ENV=development
 
 MONGO_URI=mongodb+srv://admin:jean2004@dbcurriculo.borwy.mongodb.net/dbcurriculo?retryWrites=true&w=majority
