--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 autopep8==1.6.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
 click==8.1.2
 flake8==4.0.1
 Flask==2.1.1
 gunicorn==20.1.0
+idna==3.3
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
@@ -10,13 +13,21 @@ MarkupSafe==2.1.1
 mccabe==0.6.1
 mypy==0.942
 mypy-extensions==0.4.3
+numpy==1.22.3
+pandas==1.4.2
 pycodestyle==2.8.0
 pyflakes==2.4.0
 python-dateutil==2.8.2
 python-dotenv==0.20.0
+pytz==2022.1
+requests==2.27.1
 six==1.16.0
 toml==0.10.2
 tomli==2.0.1
+types-requests==2.27.16
+types-typed-ast==1.5.2
+types-urllib3==1.26.11
 typing_extensions==4.1.1
+urllib3==1.26.9
 Werkzeug==2.1.1
 zipp==3.7.0
