--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 FLASK_APP="app:create_app()"
 FLASK_ENV=development
-API_MONGO = https://curriculo-node.herokuapp.com/competencias
+API_MONGO = https://curriculo-node.herokuapp.com/curriculo
